--- a/sist-email/package.json
+++ b/sist-email/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.14.0",
+    "express": "^4.18.1",
     "next": "12.1.6",
+    "nodemon": "^2.0.16",
     "prisma": "^3.14.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
